--- a/works.html
+++ b/works.html
@@ -153,7 +153,7 @@
         </div>
         <div class="card">
           <p class="work-types">Print - Poster</p>
-          <img src="images/ms_poster_full_illust.jpg" class="works-print img-shadow">
+          <img src="site_ms_illust/images/ms_poster_full_illust.jpg" class="works-print img-shadow">
           <p>※人物の写真を生成aiイラストに差し替えています。</p>
           <p class="work-title">ダンスグループのポスター</p>
           <p><img src="images/icon_Photoshop.png" class="tool-icon">Photoshop</p>
@@ -161,8 +161,8 @@
         <a href="ms_instaxcard/index.html" class="card-link" target="_blank" rel="noopener noreferrer">
           <div class="card">
             <p class="work-types">Print</p>
-            <img src="images/ms_instaxcard_allmember.png" class="works-other img-shadow">
-            <img src="images/ms_instaxcard_Luna.png" class="works-other img-shadow">
+            <img src="ms_instaxcard/images/ms_instaxcard_Luna.png" class="works-other img-shadow">
+            <img src="ms_instaxcard/images/ms_instaxcard_allmember.png" class="works-other img-shadow">
             <div>
               <p class="work-title">ダンスグループのチェキ券</p>
               <p><img src="images/icon_Canva.png" class="tool-icon">Canva</p>
@@ -172,7 +172,7 @@
         <a href="businesscard/index.html"class="card-link" target="_blank" rel="noopener noreferrer">
           <div class="card">
             <p class="work-types">Print - Card（架空）</p>
-            <img src="images/businesscard_LuminaDesignInc.png" class="works-print img-shadow">
+            <img src="businesscard/images/businesscard_LuminaDesignInc.png" class="works-print img-shadow">
             <div>
               <p class="work-title">デザイン会社の名刺</p>
               <p><img src="images/icon_Canva.png" class="tool-icon">Canva</p>
@@ -182,7 +182,7 @@
         <a href="businesscard/index.html"class="card-link" target="_blank" rel="noopener noreferrer">
           <div class="card">
             <p class="work-types">Print - Card（架空）</p>
-            <img src="images/businesscard_leaf-design.png" class="works-print img-shadow">
+            <img src="businesscard/images/businesscard_leaf-design.png" class="works-print img-shadow">
             <div>
               <p class="work-title">デザイン会社の名刺</p>
               <p><img src="images/icon_Canva.png" class="tool-icon">Canva</p>
@@ -218,7 +218,7 @@
         <a href="Ig_OmiyaRamen/index.html" class="card-link" target="_blank" rel="noopener noreferrer">
           <div class="card">
             <p class="work-types">Other - Social Media Post（架空）</p>
-            <img src="images/Mockup_Ig_OmiyaRamen_1.png" class="works-other img-shadow">
+            <img src="Ig_OmiyaRamen/images/Mockup_Ig_OmiyaRamen_1.jpeg" class="works-other img-shadow">
             <div>
               <p class="work-title">ラーメン店紹介のInstagram投稿</p>
               <p><img src="images/icon_Canva.png" class="tool-icon">Canva</p>
