--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <div class="hero-gradient"></div><!--背景装飾用-->
     <h2>
 			<span class="h2_welcometo">Welcome to</span>
-			<span class="h2_myname"><img src="images/SHINDOLUNA.png" alt="Shindo Luna"></span>
+			<span class="h2_myname"><img src="images/ShindoLuna.png" alt="Shindo Luna"></span>
 			<span class="h2_portfolio">Portfolio</span>
 		</h2>
 	</section>
