--- a/Ig_OmiyaRamen/index.html
+++ b/Ig_OmiyaRamen/index.html
@@ -9,8 +9,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Monomaniac+One&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="/css/slick.css">
-  <link rel="stylesheet" href="/css/slick-theme.css">
+  <link rel="stylesheet" href="../css/slick.css">
+  <link rel="stylesheet" href="../css/slick-theme.css">
 </head>
 
 <body ontouchstart="">
@@ -55,8 +55,8 @@
   &copy; 2025 Shindo Luna
 </footer>
 
-<script src="/js/jquery-3.7.1.min.js"></script>
-<script src="/js/slick.min.js"></script>
+<script src="../js/jquery-3.7.1.min.js"></script>
+<script src="../js/slick.min.js"></script>
 
 <!--カルーセル-->
 <script>
