--- a/businesscard/index.html
+++ b/businesscard/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>ms_instaxcard</title>
   <link rel="icon" href="../images/myfavicon.png">
+  <meta name="description" content="名刺デザイン(架空)の紹介ページ">
   <meta name="robots" content="noindex, nofollow"><!-- SEOに載らないようにする -->
   <meta name="viewport" content="width=device-width,initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Playfair+Display&display=swap" rel="stylesheet">
@@ -16,17 +17,34 @@
 <main>
   <section class="work-page_wrapper">
     <h1>架空デザイン会社の名刺</h1>
-    <div class="work-explanation">
-      <p>所属していたダンスグループで使用するチェキ券をCanvaで制作しました。<br>グループの雰囲気に合うよう、キラキラで可愛らしいデザインを意識しました。<br>メンバーカラーを取り入れることで、<wbr>ひと目で誰の券かわかるようにしています。<br>文字も大きく配置し、視認性を高めました。</p>
+    <div class="businesscard_wrapper">
+      <div>
+        <h2>架空企業「Lumina Design Inc.」名刺</h2>
+        <div class="work-explanation">
+          <p>架空の会社「Lumina Design Inc.」の名刺を制作しました。<br>コーポレートカラーのオレンジと青を用い、親しみやすさと信頼感を両立させています。<br>「Lumina」はラテン語で「光」を意味します。<br>右上には光彩をイメージした模様を配置し、企業の印象が残るデザインにしました。<br>名刺としての視認性や使いやすさにも配慮しています。</p>
+        </div>
+        <div class="work_tool">
+          <p>使用ツール：<img src="../images/icon_Canva.png" class="tool-icon">Canva</p><br>
+        </div>
+      </div>
+      <div class="work-img">
+        <img src="images/businesscard_LuminaDesignInc.png">
+      </div>
     </div>
-    <div class="work_tool">
-      <p>使用ツール：<img src="../images/icon_Canva.png" class="tool-icon">Canva</p><br>
+    <div class="businesscard_wrapper">
+      <div>
+        <h2>架空企業「株式会社リーフデザイン」名刺</h2>
+        <div class="work-explanation">
+          <p>架空の会社「株式会社リーフデザイン」の名刺を制作しました。<br>社名にちなんで葉っぱのモチーフを取り入れ、色味に統一感を持たせ、おしゃれで自然な印象に仕上げています。<br>シンプルで見やすいレイアウトを意識し、<br>名刺としての視認性や使いやすさにも配慮しています。</p>
+        </div>
+        <div class="work_tool">
+          <p>使用ツール：<img src="../images/icon_Canva.png" class="tool-icon">Canva</p><br>
+        </div>
+      </div>
+      <div class="work-img">
+        <img src="images/businesscard_leaf-design.png">
+      </div>
     </div>
-    <div class="work-img">
-      <img src="images/businesscard_LuminaDesignInc.png">
-      <img src="images/businesscard_leaf-design.png">
-    </div>
-  </div>
   <div class="goback moving-underline">
     <a href="../works.html#print"><< 作品一覧へ戻る</a>
   </div>
@@ -37,7 +55,7 @@
   &copy; 2025 Shindo Luna
 </footer>
 
-<script src="js/jquery-3.7.1.min.js"></script>
-<script src="js/slick.min.js"></script>
+<script src="../js/jquery-3.7.1.min.js"></script>
+<script src="../js/slick.min.js"></script>
 </body>
 </html>
